# Assignment-Agentic-AI

./: README.md
OpenRouter_AI_Agents_SDK/: .env  main.py
litellm_chainlit_chatbot/: main.py  psqasim_chat_20250526_190741.json  psqasim_chat_20250526_190849.json  psqasim_chat_20250526_191000.json  psqasim_chat_20250527_191526.json  psqasim_chat_20250527_191604.json  pyproject.toml
uv_explore/: README.md
uv_explore/hello_Uv/: README.md  pyproject.toml
uv_explore/project2/: README.md  pyproject.toml
uv_tool_func_bot/: .env  README.md  main.py  pyproject.toml  requirements.txt
