[project]
name = "project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Psqasim", email = "muhammadqasim0326@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
project2 = "project2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
